# MasterBuilder

./: .gitignore  CMakeLists.txt  README.md
CitizenBuilder/: AppState_Running.cpp  AppState_Running.h  AppState_Shutdown.cpp  AppState_Shutdown.h  AppState_Startup.cpp  AppState_Startup.h  CitizenBuilder.cpp  CitizenBuilder.h  CitizenSocket.cpp  CitizenSocket.h  main.cpp
Interfaces/: Application.cpp  ApplicationState.h
MasterBuilder/: ApplicationState_Running.cpp  ApplicationState_Running.h  ApplicationState_Shutdown.cpp  ApplicationState_Shutdown.h  ApplicationState_Startup.cpp  ApplicationState_Startup.h  CitizenDB.cpp  CitizenDB.h  MasterBuilderApplication.cpp  MasterBuilderApplication.h  MasterSocket.cpp  MasterSocket.h  main.cpp
MasterBuilder.xcodeproj/: project.pbxproj
Messaging/: Messages.proto
Shared/: Application.cpp  Application.h  Messaging.cpp  Messaging.h
